DONE: Implementation apiv2 , Update docs
